--- a/05-exercises.Rmd
+++ b/05-exercises.Rmd
@@ -8,3 +8,4 @@ Exercises | Name | Solution
 \@ref(exr:it003003) |Heat transfer requirement for multiple CSTRs| &nbsp;
 \@ref(exr:it003004) |Effect of the rate laws over PFR performance| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_007PFRisoNorders.ipynb)
 \@ref(exr:it003005) |Heat transfer requirement for a PFR| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_008PFRadiabatico.ipynb)
+\@ref(exr:it003006) |Parallel Reactions in a PFR with Heat Effects| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_009PFRpararellRx.ipynb)
